--- a/views/partials/signup.ejs
+++ b/views/partials/signup.ejs
@@ -41,7 +41,11 @@
 
             </form>
 
-  
+            <a href="/auth/google" class="btn btn-light">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google Logo" style="float:left;width:20px;height:20px;margin-top: 2px;">
+              <span class="fa fa-google"></span>  &nbsp; Sign Up with Google
+            </a>
+            
               <div>
                 <p class="mb-0">Already have an account? <a id="login-link" href="" class="text-white-50 fw-bold">Login here </a>
                 </p>
