--- a/views/partials/signup.ejs
+++ b/views/partials/signup.ejs
@@ -1,3 +1,10 @@
+<section id="signupsection">
+<div id id="titleandlogo">
+  <h1 id="title">Nasa Daily</h1>
+  <img src="https://mystickermania.com/cdn/stickers/cute-cats/sticker_3215-512x512.png" alt="" id="spacecat">
+
+</div>
+
 <section class="vh-100 gradient-custom">
 
 
@@ -41,10 +48,12 @@
 
             </form>
 
-            <a href="/auth/google" class="btn btn-light">
+            <a href="google" class="btn btn-light">
               <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google Logo" style="float:left;width:20px;height:20px;margin-top: 2px;">
               <span class="fa fa-google"></span>  &nbsp; Sign Up with Google
             </a>
+            
+            
             
               <div>
                 <p class="mb-0">Already have an account? <a id="login-link" href="" class="text-white-50 fw-bold">Login here </a>
@@ -70,5 +79,31 @@
             $('#partial-container').siblings().remove();
           })});
   </script>
+
+
+
+<div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="errorModalLabel">Error</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p id="errorMessage"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+  </section>
 
   </section>
