--- a/views/styles.css
+++ b/views/styles.css
@@ -1,16 +1,121 @@
-body
-{
-    background-color: #DAF5FF;
+body {
+    margin: auto;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    overflow: auto;
+    background: linear-gradient(315deg, rgba(101,0,94,1) 3%, rgba(60,132,206,1) 38%, rgba(48,238,226,1) 68%, rgba(255,25,25,1) 98%);
+    animation: gradient 15s ease infinite;
+    background-size: 400% 400%;
+    background-attachment: fixed;
 }
 
-#title
+@keyframes gradient {
+    0% {
+        background-position: 0% 0%;
+    }
+    50% {
+        background-position: 100% 100%;
+    }
+    100% {
+        background-position: 0% 0%;
+    }
+}
+
+.wave {
+    background: rgb(255 255 255 / 25%);
+    border-radius: 1000% 1000% 0 0;
+    position: fixed;
+    width: 200%;
+    height: 12em;
+    animation: wave 10s -3s linear infinite;
+    transform: translate3d(0, 0, 0);
+    opacity: 0.8;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.wave:nth-of-type(2) {
+    bottom: -1.25em;
+    animation: wave 18s linear reverse infinite;
+    opacity: 0.8;
+}
+
+.wave:nth-of-type(3) {
+    bottom: -2.5em;
+    animation: wave 20s -1s reverse infinite;
+    opacity: 0.9;
+}
+
+@keyframes wave {
+    2% {
+        transform: translateX(1);
+    }
+
+    25% {
+        transform: translateX(-25%);
+    }
+
+    50% {
+        transform: translateX(-50%);
+    }
+
+    75% {
+        transform: translateX(-25%);
+    }
+
+    100% {
+        transform: translateX(1);
+    }
+}
+
+#loginsection
 {
+  
+    animation: pop-in 0.5s;
+
+
+}
+#signupsection
+{
+  
+    animation: pop-in 0.5s;
+
+
+}
+@keyframes pop-in {
+    0% { opacity: 0; transform: scale(0.9); }
+    100% { opacity: 1; transform: scale(1); }
+}
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
+}
+#title {
     text-align: center;
     position: relative;
     padding-top: 20px;
-
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 60px;
-}
+  }
+  
+  #spacecat {
+    display: block;
+    margin: auto;
+    width: 150px;
+    height: 150px;
+  }
+  
+
+#nasainfo
+{
+    align-items: center;
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;}
 
 #email{
 
@@ -42,3 +147,38 @@ body
     transform: scale(1.04);
 }
 
+#nasainfo
+{
+  
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-30%, -50%);      
+}
+
+#nasaimage {   
+    border: 10px solid black; /* Add a border style */
+    max-width: 70%;
+    width: auto; /* Set width to auto to maintain aspect ratio */
+    box-shadow: 0px 5px 80px 0px;
+}
+
+@media (min-height: 900px) {
+    #nasaimage {
+        /* Reduce the height of the image if the screen height is 900px or greater */
+        max-width: 60%;
+    }
+}
+
+  
+#nasatext
+{
+    text-align: center;
+    margin-right: 40%;
+}
+
+#logoutbutton
+{
+    background-color: #212121;
+    
+}
