i think this should work

--- a/views/partials/login.ejs
+++ b/views/partials/login.ejs
@@ -85,7 +85,7 @@
 
 
 <% if (errorMessage) { %>
-  <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
+  <div class="modal fade" id="errorModal" tabapp="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -112,7 +112,7 @@
 
 
 <% if (successMessage) { %>
-  <div class="modal fade" id="successModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
+  <div class="modal fade" id="successModal" tabapp="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
