--- a/views/styles.css
+++ b/views/styles.css
@@ -1,6 +1,6 @@
 body {
     margin: auto;
-    font-family: -indexle-system, BlinkMacSystemFont, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     overflow: auto;
     background: linear-gradient(315deg, rgba(101,0,94,1) 3%, rgba(60,132,206,1) 38%, rgba(48,238,226,1) 68%, rgba(255,25,25,1) 98%);
     animation: gradient 15s ease infinite;
@@ -31,7 +31,7 @@ body {
     opacity: 0.8;
     bottom: 0;
     left: 0;
-    z-index: -1;
+    z-app: -1;
 }
 
 .wave:nth-of-type(2) {
