--- a/views/partials/signup.ejs
+++ b/views/partials/signup.ejs
@@ -48,7 +48,7 @@
 
             </form>
 
-            <a href="google" class="btn btn-light">
+            <a href="google" class="btn btn-light" style="margin-bottom: 80px;">
               <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google Logo" style="float:left;width:20px;height:20px;margin-top: 2px;">
               <span class="fa fa-google"></span>  &nbsp; Sign Up with Google
             </a>
