--- a/views/partials/login.ejs
+++ b/views/partials/login.ejs
@@ -36,12 +36,12 @@
                 <button id="login" class="btn btn-outline-light btn-lg px-5" type="submit">Login</button >
   
            
-  
-              </div>
+                </div>
+
   
             </form>
 
-            <a href="google" class="btn btn-light">
+            <a href="google" class="btn btn-light" style="margin-bottom: 80px;">
               <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google Logo" style="float:left;width:20px;height:20px;margin-top: 2px;">
               <span class="fa fa-google"></span>  &nbsp; Sign In with Google
             </a>
@@ -94,8 +94,8 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-        <%= errorMessage.replace(/\n/g, "<br>") %>
+      <div class="modal-body" style="white-space: pre-line;">
+        <%= errorMessage %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
